debugging image white space issue 4

--- a/app/globals.css
+++ b/app/globals.css
@@ -142,6 +142,7 @@
   letter-spacing: 0;
   word-spacing: 0;
   font-size: 0;
+  max-height: 600px;
 }
 .embla__slide {
   flex: 0 0 100%;
